[package]
name = "rockbox-navidrome"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = { workspace = true }
md5 = "0.7.0"
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "sqlite", "chrono", "derive", "macros"] }
rockbox-library = { path = "../library" }
rockbox-playlists = { path = "../playlists" }
rockbox-rocksky = { path = "../rocksky" }
rockbox-settings = { path = "../settings" }
uuid = { version = "1.3.0", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
rand = "0.8.5"
mime_guess = "2.0"
