[package]
name = "rockbox-navidrome"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = []
server = [
  "actix-web",
  "actix-rt",
  "actix-cors",
  "sqlx",
  "rockbox-library",
  "rockbox-playlists",
  "rockbox-rocksky",
  "rockbox-settings",
  "uuid",
  "chrono",
  "rand",
  "mime_guess",
]

[dependencies]
anyhow = { workspace = true }
md5 = "0.7.0"
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
actix-web = { version = "4", optional = true }
actix-rt = { version = "2", optional = true }
actix-cors = { version = "0.7", optional = true }
sqlx = { version = "0.8.2", optional = true, features = ["runtime-tokio", "tls-rustls", "sqlite", "chrono", "derive", "macros"] }
rockbox-library = { path = "../library", optional = true }
rockbox-playlists = { path = "../playlists", optional = true }
rockbox-rocksky = { path = "../rocksky", optional = true }
rockbox-settings = { path = "../settings", optional = true }
uuid = { version = "1.3.0", optional = true, features = ["v4"] }
chrono = { version = "0.4", optional = true, default-features = false, features = ["clock", "serde"] }
rand = { version = "0.8.5", optional = true }
mime_guess = { version = "2.0", optional = true }
