[workspace]
members = ["."]

[package]
name = "netstream"
version = "0.1.0"
edition = "2021"

[lib]
name = "rbnetstream"
crate-type = ["staticlib"]

[dependencies]
reqwest = { version = "0.12.5", features = ["blocking", "rustls-tls"], default-features = false }
once_cell = "1.17.1"
libc = "0.2.168"
