[package]
name = "rockbox-rocksky"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
dirs = "6.0.0"
rockbox-library = { path = "../library" }
reqwest = { version = "0.12.5", features = [
  "rustls-tls",
  "json",
  "multipart"
], default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
