[package]
edition = "2021"
name = "rockbox-rpc"
version = "0.1.0"

[dependencies]
anyhow = "1.0.89"
chrono = {version = "0.4.38", features = ["serde"]}
cuid = "1.3.3"
futures = "0.3.30"
owo-colors = "5.0.0"
prost = "0.13.2"
reqwest = {version = "0.12.7", features = ["rustls-tls", "json"], default-features = false}
rockbox-library = {path = "../library"}
rockbox-sys = {path = "../sys"}
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
sqlx = {version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "sqlite", "chrono", "derive", "macros"]}
tokio = {version = "1.36.0", features = ["full"]}
tonic = "0.12.2"
tonic-reflection = "0.12.2"
tonic-web = "0.12.2"

[build-dependencies]
tonic-build = "0.12.2"
