[package]
edition = "2021"
name = "rockbox-rpc"
version = "0.1.0"

[dependencies]
anyhow = "1.0.89"
async-stream = "0.3.6"
chrono = { version = "0.4.38", features = ["serde"] }
cuid = "1.3.3"
futures = "0.3.30"
md5 = "0.7.0"
owo-colors = "5.0.0"
prost = "0.13.2"
reqwest = { version = "0.12.5", features = [
  "rustls-tls",
  "json",
], default-features = false }
rockbox-graphql = { path = "../graphql" }
rockbox-library = { path = "../library" }
rockbox-rocksky = {path = "../rocksky"}
rockbox-search = { path = "../search" }
rockbox-sys = { path = "../sys" }
rockbox-types = { path = "../types" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = [
  "runtime-tokio",
  "tls-rustls",
  "sqlite",
  "chrono",
  "derive",
  "macros",
] }
tantivy = "0.25.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.16"
tonic = "0.12.3"
tonic-reflection = "0.12.2"
tonic-web = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
